# opencvproj

./: .gitignore  CMakeLists.txt  README.md  gvc.cpp  gvc.ini  testblur.cpp
inih/: CMakeLists.txt
